iPhone overlapping issue

--- a/css/main.css
+++ b/css/main.css
@@ -27,21 +27,6 @@ body {
     z-index: 2;
 }
 
-.intro-p {
-    font-weight: 300;
-    color: white;
-    font-size: 30px;
-    letter-spacing: 1px;
-    padding-top: 2rem;
-    padding-bottom: 20%;
-    position: absolute;
-    top: 2rem;
-    right: 50%;
-    -webkit-transform: translateX(50%);
-    -moz-transform: translateX(50%);
-    transform: translateX(50%);
-    width: 75%;
-}
 
 .intro {
     background-image: url(../images/parliament.jpg);
@@ -49,6 +34,18 @@ body {
     background-position: center;
     background-size: cover;
     position: relative;
+}
+
+.intro-p {
+    font-weight: 300;
+    color: white;
+    letter-spacing: 1px;
+    padding-top: 2rem;
+    padding-bottom: 20%;
+    display: block;
+    margin: auto;
+    top: 2rem;
+    width: 75%;
 }
 
 .bold {
@@ -61,12 +58,8 @@ body {
     color: white;
     border: 1px solid white;
     max-width: 4in;
-    position: absolute;
-    bottom: 4rem;
-    right: 50%;
-    -webkit-transform: translateX(50%);
-    -moz-transform: translateX(50%);
-    transform: translateX(50%);
+    display: block;
+    margin: auto;
 }
 
 .sherlock {
